--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
+
+    
 </head>
 <body>
-    <form action="#" method="post">
+    <form action="#" onsubmit="showAlert(event)">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
         <br>
@@ -30,5 +32,13 @@
         <br>
         <input type="submit" value="Submit">
       </form>
+
+      <script>
+        function showAlert(event) {
+        
+          alert("Registration successful!");
+          event.preventDefault(); 
+        }
+      </script>
 </body>
 </html>
